fixed minor margin and padding for spacing simetry

--- a/src/assets/scss/core/elements/_modal.scss
+++ b/src/assets/scss/core/elements/_modal.scss
@@ -7,7 +7,8 @@
 }
 
 .modal-body {
-  padding-bottom: 0 !important;
+  padding-bottom: 0;
+  padding-top: 0;
 }
 
 .modal-body-form {
@@ -16,6 +17,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  margin-top: 0.5rem;
 
   .input-label {
     @include font-size(xs);
@@ -106,6 +108,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin-bottom: 1rem;
 
   .modal-body-p-container {
     width: 100%;
